AM_CFLAGS=@GLOBAL_CFLAGS@ @EMPEROREXT_CFLAGS@
AM_VALAFLAGS=@EMPEROREXT_VALAFLAGS@
AM_LDFLAGS=-avoid-version

pkglib_LTLIBRARIES = libbasic_columns.la libbasic_actions.la \
		     libfile_transfer.la \
		     libsort.la libfilters.la
libbasic_columns_la_SOURCES=basic_columns.vala
libsort_la_SOURCES=sort.vala
libbasic_actions_la_SOURCES=basic_actions.vala
libfilters_la_SOURCES=filters.vala
libfile_transfer_la_SOURCES=file_transfer.vala

